--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GH_TOKEN: ${{ secrets.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 }}
+          GIST_ID: ${{ secrets.https://gist.github.com/useon/007796bb3f7989d9fde4b321aca91c0a }}
           TIMEZONE: Asia/Seoul
